kubernetes/apps/files/app/ariang/deployment.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name ariang
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
  template:
    metadata:
      name: *name
    spec:
      containers:
        - name: *name
          image: nginx:1.29.1-alpine3.22-perl
          command:
            - "sh"
            - "-c"
          args:
            - | # language: sh
              cd /usr/share/nginx/html/
              rm ./*
              curl -LO https://github.com/mayswind/AriaNg/releases/download/1.3.11/AriaNg-1.3.11-AllInOne.zip
              unzip AriaNg-1.3.11-AllInOne.zip
              rm AriaNg-1.3.11-AllInOne.zip
              sed -i 's/rpcPort:"6800"/rpcPort:"443"/g' ./index.html
              sed -i "s/secret:\"\"/secret:'$RPC_SECRET'/g" ./index.html
              sed -i 's/defaultHost:"localhost"/defaultHost:"aria2.${IDVN_DOMAIN}"/g' ./index.html
              sed -i 's/rpcHost:""/rcpHost:"aria2.${IDVN_DOMAIN}"/g' ./index.html
              nginx -g 'daemon off;'
          ports:
            - containerPort: 80
          volumeMounts:
            - name: *name
              mountPath: /etc/nginx/
      volumes:
        - name: *name
          configMap:
            name: *name
            optional: false
